--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "uikit": "^3.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
