--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
+    "redux": "^4.0.4",
     "typescript": "^3.5.3",
+    "typescript-fsa": "^3.0.0-beta-2",
+    "typescript-fsa-reducers": "^1.2.1",
     "uikit": "^3.1.4"
   },
   "scripts": {
@@ -38,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.1",
     "node-sass": "^4.12.0"
   }
 }
