--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
     "redux": "^4.0.4",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.5.2",
     "typescript": "^3.5.3",
     "typescript-fsa": "^3.0.0-beta-2",
     "typescript-fsa-reducers": "^1.2.1",
