--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.2",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "@types/redux-logger": "^3.0.7",
+    "firebase": "^6.3.5",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -15,6 +18,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "redux-observable": "^1.1.0",
     "rxjs": "^6.5.2",
     "typescript": "^3.5.3",
