--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-transition-group": "^4.2.2",
     "@types/redux-logger": "^3.0.7",
     "firebase": "^6.3.5",
     "normalize.css": "^8.0.1",
@@ -17,6 +18,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
+    "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.1.0",
