--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,10 +4,8 @@ on:
   push:
     branches:
       - master
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,6 +24,10 @@ jobs:
         npm run build --if-present
       env:
         CI: true
+    - name: run Lighthouse CI
+      run: |
+        npm install -g @lhci/cli@0.3.x
+        lhci autorun --upload.target=temporary-public-storage || echo "LHCI failed!"
     - name: deploy to Firebase Hosting
       run: |
         ./node_modules/.bin/firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
