--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -13,8 +13,7 @@
         "assertions": {
           "offscreen-images": "off",
           "uses-webp-images": "off",
-          "categories:performance": ["warn", {"minScore": 0.6}],
-          "categories:accessibility": ["error", {"minScore": 0.8}]
+          "first-contentful-paint": ["error", {"maxNumericValue": 10000}]
         }
       },
       "upload": {
