--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,4 +31,4 @@ jobs:
     - name: deploy to Firebase Hosting
       run: |
         npm install -g firebase-tools
-        ./node_modules/.bin/firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
+        firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
