--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-transition-group": "^4.2.2",
     "@types/redux-logger": "^3.0.7",
     "firebase": "^6.6.2",
+    "firebase-tools": "^7.10.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
